# RadaRec

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  main.yml
src/static/: script.js  style.css
src/templates/: base.html
